v1.8.0/_sources/api/generated/pywr.recorders.TablesRecorder.rst.txt
pywr.recorders.TablesRecorder
=============================

.. currentmodule:: pywr.recorders

.. autoclass:: TablesRecorder

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~TablesRecorder.__init__
      ~TablesRecorder.after
      ~TablesRecorder.aggregated_value
      ~TablesRecorder.before
      ~TablesRecorder.finish
      ~TablesRecorder.generate_dataframes
      ~TablesRecorder.is_constraint_violated
      ~TablesRecorder.load
      ~TablesRecorder.register
      ~TablesRecorder.reset
      ~TablesRecorder.setup
      ~TablesRecorder.unregister
      ~TablesRecorder.values
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~TablesRecorder.agg_func
      ~TablesRecorder.children
      ~TablesRecorder.comment
      ~TablesRecorder.constraint_lower_bounds
      ~TablesRecorder.constraint_upper_bounds
      ~TablesRecorder.epsilon
      ~TablesRecorder.ignore_nan
      ~TablesRecorder.is_constraint
      ~TablesRecorder.is_double_bounded_constraint
      ~TablesRecorder.is_equality_constraint
      ~TablesRecorder.is_lower_bounded_constraint
      ~TablesRecorder.is_objective
      ~TablesRecorder.is_upper_bounded_constraint
      ~TablesRecorder.model
      ~TablesRecorder.name
      ~TablesRecorder.parents
   
   